syntax = "proto3";

option csharp_namespace = "EchoClip.gRPC";

package chat;

service ChatController {
	rpc CreateChat (CreateChatRequest) returns (CreateChatResponse);
	rpc GetJointedChats (GetJointedChatsRequest) returns (GetJointedChatsResponse);
	rpc GetVocieRocrdingsInChat (GetVoiceRecordingsInChatRequest) returns (GetVoiceRecordingsInChatResponse);
	rpc GetChatsICreated (GetChatsICreatedRequest) returns (GetChatsICreatedResponse);
	rpc AddVoiceRecordingToChat (AddVoiceRecordingToChatRequest) returns (AddVoiceRecordingToChatResponse);
	rpc GetUsersInChat (GetUsersInChatRequest) returns (GetUsersInChatResponse);
}

message CreateChatRequest {
	string Name = 1;
}

message CreateChatResponse {}

message UserChatMessage {
	string Id = 1;
	string Name = 2;
}

// Czaty do ktorych dolaczylem, nie podaje id user bo jest przechywytywany przez authorization token
message GetJointedChatsRequest {}

message GetJointedChatsResponse {
	repeated UserChatMessage JointedChats = 1;
}

// Czaty ktore stworzylen, nie podaje id user bo jest przechywytywany przez authorization token
message GetChatsICreatedRequest {}

message GetChatsICreatedResponse {
	repeated UserChatMessage CreatedChats = 1;
}

message VoiceRecodringInChatMessage {
	string Id = 1;
	string Name = 2;
}

message GetVoiceRecordingsInChatRequest {
	string ChatId = 1;
}

message GetVoiceRecordingsInChatResponse {
	repeated VoiceRecodringInChatMessage VoiceRecodringInChatInfo = 1;
}

// TODO do przemyslenia jak to zrobic czysto i zachowac performance. 
// Tak wiem, trzeba wykonac 2 strzaly aby dodac voiceRecording do czatu
// 1. Dodac voice recording do bazy.
// 2. Popiac voice recoding pod czat.
message AddVoiceRecordingToChatRequest {
	string ChatId = 1;
	string VoiceRecordingId = 2;
}

message AddVoiceRecordingToChatResponse {}

message UserFromChatMessage {
	string Username = 1;
	string Name = 2;
	string Surname = 3;
}

message GetUsersInChatRequest {
	string ChatId = 1;
}

message GetUsersInChatResponse {
	repeated UserFromChatMessage UserFromChatMessage = 1;
}