syntax = "proto3";

option csharp_namespace = "EchoClip.gRPC";

import "google/protobuf/timestamp.proto";

package voiceRecording;

service VoiceRecodringController {
	rpc CreateVoiceRecording (CreateVoiceRecordingRequest) returns (CreateVoiceRecordingResponse);
	rpc GetMyVoiceRecording (GetMyVoiceRecordingRequest) returns (GetMyVoiceRecordingResponse);
	rpc GetVoiceRecording(GetVoiceRecordingRequest) returns (GetVoiceRecordingResponse);
}

message VoiceRecodringMessage {
	string VoiceRecordingId = 1;
	string name = 2;
	bytes audio_data = 3;
}

message CreateVoiceRecordingRequest {
	string name = 1;
	bytes audio_data = 2;
}

message CreateVoiceRecordingResponse {
	string VoiceRecordingId = 1;
}

message GetMyVoiceRecordingRequest {}

message GetMyVoiceRecordingResponse {
	repeated VoiceRecodringMessage myVoiceRecordings = 1;
}

message GetVoiceRecordingRequest {
	string VoiceRecordingId = 1;
}

message GetVoiceRecordingResponse {
	VoiceRecodringMessage VoiceRecording = 1;
}